<resources>
    <string name="app_name">SmartHome</string>
    <!-- default_web_client_id is generated by google-services plugin; do not define here to avoid duplicates -->
    <string name="no_data_offline">No data (offline or not logged in)</string>
    <string name="enter_name">Enter name</string>
    <string name="device_default_name">Device</string>
    <string name="device_label">%1$s - %2$s</string>
    <!-- UI labels -->
    <string name="room_title">Room</string>
    <!-- Dialog strings -->
    <string name="device_name_hint">Device name</string>
    <string name="add_button_label">Add</string>
    <!-- Login screen -->
    <string name="hello_user">Hello, User</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="register_button_label">Register</string>
    <string name="google_sign_in_button_label">Sign in with Google</string>
    <!-- Dashboard -->
    <string name="welcome_user_name">Hello, %1$s</string>
    <string name="main_power_label">Main Power</string>
    <string name="test_firebase_connection">Firebase Connection</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="fab_add_desc">Add</string>
    <!-- Registration screen -->
    <string name="create_account_title">Create Account</string>
    <string name="create_account_subtitle">Sign up to get started</string>
    <string name="full_name_hint">Full Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="accept_terms">I accept the terms and conditions</string>
    <string name="or_text">OR</string>
    <string name="google_sign_up_label">Sign up with Google</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_link">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_link">Register</string>
    <!-- Profile Dialog -->
    <string name="profile_title">Profile</string>
    <string name="profile_name_label">Name</string>
    <string name="profile_email_label">Email</string>
    <string name="profile_uid_label">User ID (UID)</string>
    <string name="edit_name_button">Edit Name</string>
    <string name="copy_uid_button">Copy UID</string>
    <string name="uid_copied">UID copied!</string>
    <string name="logout_button">Logout</string>
    <string name="close_button">Close</string>
    <string name="edit_name_dialog_title">Edit Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="name_updated">Name updated successfully!</string>
</resources>
